--- a/index.html
+++ b/index.html
@@ -120,10 +120,11 @@
 
       <div class="content">
          <h3>why choose us?</h3>
-         <p>Trusted and Experienced Teachers. 
-            Availability of Refined Resources for Education.
-            Both Experienced and Young Teachers are Present.
-            
+         <p>
+            Trusted and Experienced Teachers.<br> 
+            Availability of Refined Resources for Education.<br>
+            Both Experienced and Young Teachers are Available.<br>
+            Remarkable History of Achievements of our Students.
          </p>
          <a href="#contact" class="btn">contact us</a>
       </div>
@@ -147,37 +148,39 @@
          <div class="swiper-slide slide">
             <img src="images/course-1.svg" alt="">
             <h3>web development</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, repellat!</p>
+            <p>What is web development meaning?
+               Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience.</p>
          </div>
 
          <div class="swiper-slide slide">
             <img src="images/course-2.svg" alt="">
             <h3>digital marketing</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, repellat!</p>
+            <p>Digital marketing, also known as online marketing, refers to advertising delivered through digital channels to promote brands and connect potential customers using the internet and other forms of digital communication such as: Search engines.</p>
          </div>
 
          <div class="swiper-slide slide">
             <img src="images/course-3.svg" alt="">
             <h3>science and biology</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, repellat!</p>
+            <p>Science is the study of the physical and natural world through observations and experiments. It is one of the most important topics of study in world like living matter in all its forms and phenomena reference to reproduction, origin etc.</p>
          </div>
 
          <div class="swiper-slide slide">
             <img src="images/course-4.svg" alt="">
             <h3>graphic design</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, repellat!</p>
+            <p>the art and practice of planning and projecting ideas and experiences with visual and textual content. Designing the layout of a magazine and creating a poster for a theatre performance are all examples of graphic design.</p>
          </div>
 
          <div class="swiper-slide slide">
             <img src="images/course-5.svg" alt="">
             <h3>teaching</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, repellat!</p>
+            <p>What is the best definition of teaching?
+               Teaching can be defined as engagement with learners to enable their understanding and application of knowledge and processes. It includes content selection, assessment and reflection.</p>
          </div>
 
          <div class="swiper-slide slide">
             <img src="images/course-6.svg" alt="">
             <h3>engineering</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, repellat!</p>
+            <p>Engineering involves the application of the principles of science and mathematics to solve real world problems and to innovate new products and processes across a wide range of industries and applications. main categories: chemical, civil, electrical and mechanical engineering.</p>
          </div>
 
       </div>
@@ -287,11 +290,11 @@
       <div class="swiper-wrapper">
 
          <div class="swiper-slide slide">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus atque fuga delectus numquam consequatur velit autem distinctio possimus culpa!</p>
+            <p>Many of my coworkers choose to use AceUrSelf for continuing education. I feel it has the best selection, training and curriculum vs others I have tried. Yes, the courses may be longer...<br><br></p>
             <div class="user">
                <img src="images/pic-1.png" alt="">
                <div class="user-info">
-                  <h3>john deo</h3>
+                  <h3>Arjav Jain</h3>
                   <div class="stars">
                      <i class="fas fa-star"></i>
                      <i class="fas fa-star"></i>
@@ -304,11 +307,11 @@
          </div>
 
          <div class="swiper-slide slide">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus atque fuga delectus numquam consequatur velit autem distinctio possimus culpa!</p>
+            <p>I'm in the middle of taking two different AceUrSelf courses, Teaching Masterclass and the Complete Web Development. I paid about about 15 USD for these courses and both are excellent (IMHO). <br> <br></p>
             <div class="user">
                <img src="images/pic-2.png" alt="">
                <div class="user-info">
-                  <h3>john deo</h3>
+                  <h3>Anshika Mishra</h3>
                   <div class="stars">
                      <i class="fas fa-star"></i>
                      <i class="fas fa-star"></i>
@@ -321,11 +324,11 @@
          </div>
 
          <div class="swiper-slide slide">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus atque fuga delectus numquam consequatur velit autem distinctio possimus culpa!</p>
+            <p>This is one of the good websites where a person can learn from any domain and any field at a very affordable costs..... This is useful and beneficial for the both tutors and the students who are learning from it... Thanks AceUrSelf.</p>
             <div class="user">
                <img src="images/pic-3.png" alt="">
                <div class="user-info">
-                  <h3>john deo</h3>
+                  <h3>Ishant Sharma</h3>
                   <div class="stars">
                      <i class="fas fa-star"></i>
                      <i class="fas fa-star"></i>
@@ -338,11 +341,11 @@
          </div>
 
          <div class="swiper-slide slide">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus atque fuga delectus numquam consequatur velit autem distinctio possimus culpa!</p>
+            <p>I have been a fan of AceUrSelf for a long time and currently have over 85 courses in my account. I find the platform user friendly and you can contact the instructors no matter how long ago the course was posted.</p>
             <div class="user">
                <img src="images/pic-4.png" alt="">
                <div class="user-info">
-                  <h3>john deo</h3>
+                  <h3>Anshika Soni</h3>
                   <div class="stars">
                      <i class="fas fa-star"></i>
                      <i class="fas fa-star"></i>
@@ -355,11 +358,11 @@
          </div>
 
          <div class="swiper-slide slide">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus atque fuga delectus numquam consequatur velit autem distinctio possimus culpa!</p>
+            <p>The courses are very simple and up to the expectations at very cheap prices... Beginner to advanced...all the level courses are available..so that you can choose one from them. You can't learn everything to the very advanced level.</p>
             <div class="user">
                <img src="images/pic-5.png" alt="">
                <div class="user-info">
-                  <h3>john deo</h3>
+                  <h3>Divyansh Asthana</h3>
                   <div class="stars">
                      <i class="fas fa-star"></i>
                      <i class="fas fa-star"></i>
@@ -372,11 +375,11 @@
          </div>
 
          <div class="swiper-slide slide">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus atque fuga delectus numquam consequatur velit autem distinctio possimus culpa!</p>
+            <p> The great thing about AceUrSelf, is if there's a course that is costly (i.e. $99), just wait and chances are it will be $12-20 before long. They are constantly having sales. Udemy saved my sanity this year at a very reasonable cost.</p>
             <div class="user">
                <img src="images/pic-6.png" alt="">
                <div class="user-info">
-                  <h3>john deo</h3>
+                  <h3>Dishita Jain</h3>
                   <div class="stars">
                      <i class="fas fa-star"></i>
                      <i class="fas fa-star"></i>
