--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                <a href="#" class="fab fa-instagram"></a>
                <a href="#" class="fab fa-linkedin"></a>
             </div>
-            <h3>john deo</h3>
+            <h3>Tiger Shroff</h3>
          </div>
          
          <div class="swiper-slide slide">
@@ -222,7 +222,7 @@
                <a href="#" class="fab fa-instagram"></a>
                <a href="#" class="fab fa-linkedin"></a>
             </div>
-            <h3>john deo</h3>
+            <h3>Anushka Sharma</h3>
          </div>
 
          <div class="swiper-slide slide">
@@ -233,7 +233,7 @@
                <a href="#" class="fab fa-instagram"></a>
                <a href="#" class="fab fa-linkedin"></a>
             </div>
-            <h3>john deo</h3>
+            <h3>Anupam Kher</h3>
          </div>
 
          <div class="swiper-slide slide">
@@ -244,7 +244,7 @@
                <a href="#" class="fab fa-instagram"></a>
                <a href="#" class="fab fa-linkedin"></a>
             </div>
-            <h3>john deo</h3>
+            <h3>Shradha Kapoor</h3>
          </div>
 
          <div class="swiper-slide slide">
@@ -255,7 +255,7 @@
                <a href="#" class="fab fa-instagram"></a>
                <a href="#" class="fab fa-linkedin"></a>
             </div>
-            <h3>john deo</h3>
+            <h3>Hrithik Roshan</h3>
          </div>
 
          <div class="swiper-slide slide">
@@ -266,7 +266,7 @@
                <a href="#" class="fab fa-instagram"></a>
                <a href="#" class="fab fa-linkedin"></a>
             </div>
-            <h3>john deo</h3>
+            <h3>Tahira Kashyap</h3>
          </div>
 
       </div>
