--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
 
 <!-- footer section ends -->
 
+<!--Swiper is Already Maded Syntax that we can use in our Projects and Help us in Making Or Projects Easy -->
 <!-- swiper js link  -->
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
